delete caps lock

--- a/index.html
+++ b/index.html
@@ -3,25 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ДАНЯ ПЕЧИНКИН</title>
+    <title>Даня Печинкин</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 <div class="container">
     <div class="circle circle-base">
-        <span data-key="greeting">ПРИВЕТ</span>
+        <span data-key="greeting">привет</span>
         <div class="language-toggle">
-            <button class="lang-btn" data-lang="en">EN</button>
+            <button class="lang-btn" data-lang="en">en</button>
         </div>
     </div>
-    <div class="circle circle-base"><span data-key="name">Я - ДАНЯ</span></div>
-    <div class="circle circle-base"><span data-key="surname">ПЕЧИНКИН.</span></div>
-    <div class="circle circle-base"><span data-key="intro">ЭТО МОЁ:</span></div>
-    <div class="circle circle-didj"><span data-key="dj">ДИДЖ</span></div>
-    <div class="circle circle-dev"><span data-key="resume">РЕЗЮМЕ</span></div>
-    <div class="circle circle-yt"><span data-key="youtube">ЮТУБ</span></div>
-    <div class="circle circle-tg"><span data-key="telegram">ТЕЛЕГРАМ</span></div>
-    <div class="circle circle-mail"><span data-key="email">ПОЧТА</span></div>
+    <div class="circle circle-base"><span data-key="name">я - Даня</span></div>
+    <div class="circle circle-base"><span data-key="surname">Печинкин.</span></div>
+    <div class="circle circle-base"><span data-key="intro">это моё:</span></div>
+    <div class="circle circle-didj"><span data-key="dj">дидж</span></div>
+    <div class="circle circle-dev"><span data-key="resume">резюме</span></div>
+    <div class="circle circle-yt"><span data-key="youtube">ютуб</span></div>
+    <div class="circle circle-tg"><span data-key="telegram">телеграм</span></div>
+    <div class="circle circle-mail"><span data-key="email">почта</span></div>
 </div>
 
 <script src="script.js"></script>
