--- a/didj/index.html
+++ b/didj/index.html
@@ -37,7 +37,8 @@
         </div>
         <div class="centerKoolDj_archive">
             архив:<br/>
-            <a href="2023/index.html" class="archive2023">онлайн-версия, лето 2024</a>
+            <a href="2023/index.html" class="archive2023">онлайн-версия, лето 2024</a><br/>
+            <a href="https://didj-2.web.app" class="archive2023">НОВАЯ ВЕРСИЯ DIDJ 2 YEAAAH</a>
         </div>
     </div>
 </div>
